<resources>
    <string name="app_name">Tour Mate</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Dont have an Account?</string>
    <string name="email_or_mobile_number">Email or Mobile Number</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log In</string>
    <string name="enter_your_full_name">Enter your Full Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_conditions">By creating an account you agree to our terms &amp; conditions.</string>
    <string name="already_have_accoutn">Already Have Accoutn</string>
    <string name="tours">Tours</string>
    <string name="add_trip">Add Trip</string>
    <string name="trip_name">Enter Trip Name</string>
    <string name="enter_trip_description">Enter Trip Description</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="tour_details">Tour Details</string>
    <string name="tour_name">Tour Name</string>
    <string name="tour_description">Tour Description</string>
    <string name="tour_expence">Tour Expence</string>
    <string name="total_cost">Total Cost</string>


</resources>
