<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/profileIV"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:background="@drawable/shape_circle" />

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/enter_your_full_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/enter_email"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />
        <EditText
            android:id="@+id/mobileNUmberET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/enter_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/signupBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:textAlignment="center"
            android:layout_marginTop="10dp"
            android:text="@string/by_creating_an_account_you_agree_to_our_terms_and_conditions"
            android:layout_gravity="center"
            android:textColor="@color/colorPrimaryDark"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/already_have_accoutn"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/loginTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/log_in"
                android:textStyle="bold"
                android:onClick="openLoginActivity"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>



    </LinearLayout>

</RelativeLayout>