<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/emailET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/email_or_mobile_number"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/passwordET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:inputType="textPassword"
            android:padding="10dp"
            android:hint="@string/enter_password"
            android:textColorHint="@color/colorPrimary"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".3"
                android:text="@string/dont_have_an_account"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary" />
            <TextView
                android:id="@+id/signupTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight=".7"
                android:text="@string/sign_up"
                android:textStyle="bold"
                android:onClick="openSignupActivity"
                android:textSize="16sp"
                android:textColor="@color/colorPrimaryDark" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>