<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TourDetailsActivity">

    <!--Toolber Start-->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryDark">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/tour_details"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>
    <!--Toolber End-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:drawableRight="@drawable/icon_edit_small"
            android:drawableTint="@color/design_default_color_primary"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/tour_name"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <EditText
            android:id="@+id/descriptionET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:drawableRight="@drawable/icon_edit_small"
            android:drawableTint="@color/design_default_color_primary"
            android:inputType="text"
            android:padding="10dp"
            android:text="@string/tour_description"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />

        <TextView
            android:id="@+id/expenceTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:hint="@string/tour_expence"
            android:padding="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textColorHint="@color/colorPrimary" />

        <TextView
            android:id="@+id/showExpenceListTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/shape_skyblue_round_corner_transperent"
            android:padding="10dp"
            android:text="View Details Expence"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary" />


        <Button
            android:id="@+id/saveBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@color/colorPrimary"
            android:text="Save"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


    </LinearLayout>

</RelativeLayout>